# Arcadia

./: .gitattributes  .gitignore  LICENSE  README.md  biome.json  index.ts  package.json  tsconfig.json
arcadia-rs/: Cargo.toml
arcadia-rs/src/: components.rs  engine_tests.rs  game_logic.rs  lib.rs  procgen.rs  rng.rs  systems.rs
arcadia-ts/: README.md  package.json  vite.config.ts
arcadia-ts/src/: App.css  App.tsx
arcadia-ts/src/audio/: AudioEngine.ts
arcadia-ts/src/engine/: ArcadiaEngine.ts  GameLoop.ts  types.ts
arcadia-ts/src/input/: InputManager.ts
arcadia-ts/src/renderer/: Renderer.ts
docs/examples/: 01_headless_server.rs  02_advanced_bitmasks.md
playground/astra-naught/: index.html  vite.config.ts
playground/astra-naught/src/: index.tsx
playground/babylon-estate/: package.json
playground/verdant-descent/src/: App.tsx
projects/astra-naught/: package.json  tsconfig.app.json
projects/verdant-descent/: package.json  vite.config.ts
templates/cipher-room/: package.json  vite.config.ts
templates/cipher-room/src/: App.tsx
templates/downleaf/: package.json
templates/downleaf/src/: App.tsx
templates/spinfall-arena/: package.json
templates/spinfall-arena/src/: App.tsx
types/: wasm-pack.d.ts
web/: .env.example  README.md  package.json  tsconfig.json  vite.config.ts  wrangler.jsonc
web/src/: index.css  routeTree.gen.ts  styles.css
web/src/components/: Header.tsx
web/src/game/: contracts.ts  manifest.ts
web/src/lib/: routes.ts
web/src/routes/: __root.tsx  _os.nexus.tsx  _os.runtime.$gameId.tsx  _os.tsx  _portfolio.index.tsx  (+6 more)
(+12 files in other folders)
