[package]
name = "arcadia-rs"
version = "0.1.0"
description = "Arcadia game engine core written in Rust, compiled to WebAssembly."
repository = "https://github.com/divijg19/Arcadia/arcadia-rs"
edition = "2024"
[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
hecs = "0.11.0"

[profile.release]
opt-level = "s"
lto = true
