[package]
name = "arcadia-rs"
version = "1.4.5"
description = "Rust runtime for Arcadia, a browser game engine for WebAssembly."
repository = "https://github.com/divijg19/Arcadia/tree/main/arcadia-rs"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
hecs = "0.11"
serde = { version = "1.0", features = ["derive"] }
postcard = { version = "1.1", features = ["alloc"] }

[profile.release]
opt-level = "s"
lto = true
